--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,4 @@
-propel.project = adminLTE
+propel.project = propel-bootemp
 
 propel.database = mysql
 propel.database.url = mysql:host=localhost;dbname=db_${propel.project}
